# rust-axum

hello_world/: Cargo.toml
hello_world/src/: main.rs
routing/: Cargo.toml  README.md
routing/src/: lib.rs  main.rs
routing/src/routes/: get_json.rs  hello_world.rs  mirror_body_json.rs  mirror_custom_header.rs  mirror_user_agent.rs  mod.rs  path_variables.rs  query_params.rs  read_middleware_custom_header.rs  returns_201.rs  set_middleware_custom_header.rs  validate_with_serde.rs
seaorm/: Cargo.toml
seaorm/src/: lib.rs  main.rs
seaorm/src/database/: mod.rs  prelude.rs  tasks.rs  users.rs
seaorm/src/routes/: create_task.rs  custom_json_extractor.rs  get_one_task.rs  get_tasks.rs  mod.rs  validate_with_serde.rs
